base/01-intern/05-teamspeak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts3-manager-service
  namespace: teamspeak
  labels:
    environment: intern
    app: ts3-manager
spec:
  selector:
    app: ts3-manager
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 8087
