base/01-intern/05-teamspeak/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ts3-manager
  namespace: teamspeak
  labels:
    environment: intern
    app: ts3-manager
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ts.home`)
      kind: Rule
      services:
        - name: ts3-manager-service
          port: 8200
